# rust_context

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile.simple  docker-compose.yml  entrypoint.sh  env  migrate_db.sh  readme.md  test_output.txt
.sqlx/: query-05daffc80c426a5794538b2eb5923b3c913c2151dee83511cede067265bdc51e.json  query-0dd6d8565f0ae70abb21b377a3fbc7efaff6100de7f42e55a70b47e1892eb80b.json  query-17c8c0abfb8773d35cc67f62e61afcbb1df015a1244047eba8de803f2f9e66ef.json  query-18227c57bda65e494ec88211facb457662ce98134b5ed1d7d1e2b8b749ed9b95.json  query-1b60d9c2e184978ab98b0123077328c2fb2d7244501e99a420a4557a76f35e1e.json  query-1cdcd6d6b4ace7d591e7c6ee6a2c661b77a13ac5393576bfb846db4aff1ccfd9.json  query-2167509388561a2dde9f8c455aaa6772363296dc29cefa2e3ababd93037ef283.json  query-25e0230a824fc7b7642ea9c920078539028e19f4a827c398325a77129485cb0c.json  query-29b1155861d5b57e5776b187027cdd7db62a1314660540395269a90306b6c7ba.json  query-2a81e125ea1c442ef0f06d975cff2ad23856dbacb1d585dcc9e32001ffcca052.json  query-2bc61a23eced7250df6d9e504a96f2681dc1d9c0d6347b52a5768636c1fcae60.json  query-30b823801952cfef6706188c05bf5d4bb47c79c93ac538dca1403008b91ba5d9.json  query-327ff6a92319fbe80fa9d9f6bb12c1b0ec622e3e78f4f6e83152cf7132c45d6d.json  query-32d1906e6e2c9f4f8108de858c92401b32e7e47fe2240d129c29d35896afe630.json  query-331682a6d45fb68ae19d45312c597b2aeee388d2342a5164c3a091551b36d4ec.json  query-342111d653189f2101330bb24372e3b5096b283cbabab5fabd716bfe0731315b.json  query-34d1c8e4fa48c4424f98b8ff6ff029b22ad75a5bc86e8b90a2d1e977499ee67c.json  query-40a1108690d7c9ea3679f5a3230adc4e1d7be8a9b113ad30de7d37beaf786e5b.json  query-42278fc0f8261d088ba4a81e5a58b5093126370d4b58e8b01aaa0efb74d6bb17.json  query-485f46748d4ae75591cd21847c3f290f518f485ca85e0a5057f0d5c76b637621.json  query-4869301aebbe9d4a51e8ff809c8c5ae71976b0e9035a22d1f41bb9008986a085.json  query-4a475f0fa02cd6afb0c97dfa51e5ab7fb8feac2c148b3a25dfea60e9727c013a.json  query-4ac95786ad9e7f6bf3deada219c201de1e1a1722a3d9821cd1947228f2c5faa3.json  query-50ae0e6f42372ba36dd358f1e2a60fbef0f23b1d0ddb22184360207e000da149.json  query-582865a13a2b87dbbd649c652cddecb69042a0606fbee6a741b24b97abf03d6f.json  query-58e2fdd801350261565c692f67335939c6108b28dc11685854b6c398ca5c1be8.json  query-596348cd2aaa72c1794381688d626bfda50fcc89f5a6c839b84b15fd8eb9ec25.json  query-5a504bbee10787f8f372a8da17c7b7d03d594059b18d8cc31d362607768780c5.json  query-64e4559f5f02548ed58641a1ba23e15ea07c2c03fa16add7f92c22a5a7139507.json  query-6912397c07d6f4b59e9a51e9eb726a20604681bfed38905a658eda56e5c04584.json  query-6a42f5775837d0f27452c6087d1c895b67826d19cf2b8635559a68c88bf269a6.json  query-6aa5867647821ad25c7b313296259cd15ae680fb22efc67970877470584365ce.json  query-6bb61dde4c2fef06f4d01e9b9d0d266a673ffba191748f7731516dfd5095c402.json  query-6c5d2183e2113bd7543670aaad26f80aa8bbed4be97612e5737c406148753dd3.json  query-6fbe9dce6abd2cbe15d289365610895b17184ff58869d8a38850c3374d3670b0.json  query-7385d36e525e18c016ec51c604fdfe50eb46f2cf9575473ddeac9a2b81b36f68.json  query-771ada166e0026b72b6df3d88204f8f8304364d8bee25739af2a7c292f62e253.json  query-79221ce1858ac46cbbf9aa6e1007e7260c4f04f303ed155c6ffd10278315693d.json  query-7972d274e698ea146ce76a39f37784f9b5f5e2c52a9cfc5b786f958a1f33f8b0.json  query-7b7098b80c87db662b5029d1807c00592a9fdb52fc7f24e88b3c1262a5e9b396.json  (+47 more)
migrations/: 0009_create_poll_table.sql  (+21 more)
src/: api_doc.rs  (+15 more)
(+27 files in other folders)
