[package]
name = "rust_context"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
axum = { version = "0.8.8", features = ["ws"]}
serde = {version = "1", features = ["derive"]}
serde_json = "1"
futures-util = "0.3"
futures-macro = "=0.3.32"
dotenvy = "0.15.7"
lettre = {version = "0.11.20", features = ["smtp-transport", "tokio1-native-tls", "builder"]}
chrono = "0.4.44"
uuid = { version = "1.23.0", features = ["v4"] }
rand = "0.10.0"
hex = "0.4"
axum-macros = "0.5.0"
validator = { version = "0.16", features = ["derive"] }
tower = { version = "0.4", features = ["util"] }